2020-06-08  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document new 'reroute-receiver-regex' directive.
    * gw/bb_smscconn.c: handle 'reroute-receiver-regex' in route_incoming_to_smsc().
    * gw/smscconn_p.h: add a List in struct smscconn for reroute-receiver-regex.
    * gw/smscconn.c: init and de-init handling of reroute-receiver-regex.
    * gwlib/cfg.def: add directive 'reroute-receiver-regex'.
    This patchset allows defining regex patterns for receiver numbers when doing 
    re-routing of MOs towards MTs.
    
2020-06-03  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c, test/fakesmsc.c: add type 'utf8' to allow simple
      injection of UTF-8 encoded MOs.
      
2020-05-04 Alexander Malysh <amalysh @ kannel.org>
    * gwlib/http.[ch]: added http PATCH method support

2020-03-30  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_redis.c: fix dlr_redis_update() to get correct DLR entry updates,
      i.e. for intermediate events.

2020-01-06 Alexander Malysh <amalysh @ kannel.org>
    * gw/smsc/smsc_smpp.c, doc/userguide.xml, gwlib/cfg.def: added new config
      option to retry even if SMSC rejects login due to wrong username & password.

2020-01-06 Alexander Malysh <amalysh @ kannel.org>
    * doc/userguide/userguide.xml, gw/urltrans.c: added %U escape code for
      hexcoded UDH.

2019-12-10  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: fixed last commit, wrong XML struct.
    Thanks to Alexander Malysh for pointing to this.
    
2019-12-07  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/http/generic.c: allow using the 'alt-charset' usage in the MT
      direction too, to transcode the payload before URL-encoding and 
      setting the corresponding charset="" value in the content-type header
      for HTTP POST methods.
      
2019-12-04  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document 'use-post' for generic type
      of HTTP SMSC.